fix horizontal scroll on tabbed container.

--- a/src/App.scss
+++ b/src/App.scss
@@ -183,6 +183,7 @@ $transition-fast: 100ms;
 }
 
 .tabbed-container {
+  overflow-x: hidden;
 
   .tabs {
     display: flex;
